DB and Beans setup

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.datasource.platform=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/online_bank
+spring.datasource.username=postgres
+spring.datasource.password=@1b1C1512
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
 
